# ccpahc.github.io

./: .gitignore  .lycheeignore  .pre-commit-config.yaml  404.html  CNAME  CONTRIBUTING.md  README.md  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: build-and-deploy.yml  link-checker.yml
about/: index.html
activities/: index.html
activities/codes-eoi/: index.html
activities/community-forum/: index.html
activities/regional-engagement/: index.html
activities/town-hall-2025/: index.html
activities/town-hall-2025/agenda/: index.html
activities/town-hall-2026/: index.html
blog/: index.html
blog/archive/2025/: index.html
blog/archive/2026/: index.html
blog/category/case-studies/: index.html
blog/category/news/: index.html
blog/category/reports/: index.html
data/: hpc-sites.yaml
docs/: about.md  index.md
docs/activities/: codes-eoi.md  community-codes.md  community-forum.md  index.md  regional-engagement.md  town-hall-2025.md
docs/blog/: .authors.yml
docs/data/: hpc-sites.yaml
docs/resources/: funding.md  routes-to-access-compute.md  sites.md  tools.md
docs/stylesheets/: extra.css  font.css
overrides/: main.html
resources/funding/: index.html
resources/routes-to-access-compute/: index.html
resources/sites/: index.html
resources/tools/: index.html
scripts/: common.py  config.py  make_exclusions.py  make_search.py
search/: search_index.json
stylesheets/: extra.css  gcse.css  header.css
(+12 files in other folders)
