[project]
name = "website"
version = "0.1.0"
description = "Website for CCP-AHC project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-git-revision-date-localized-plugin>=1.4.7",
    "mkdocs-material>=9.6.15",
    "mkdocs-rss-plugin>=1.17.3",
    "mkdocs-macros-plugin>=1.4.0",
    "pyyaml>=6.0.2"
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "pre-commit>=4.3.0",
]
